<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_shopping_list_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_shopping_list"
        android:src="@drawable/ic_baseline_add_shopping_cart_24"
        android:visibility="invisible"
        app:backgroundTint="@color/secondary_fab"
        app:fabSize="normal"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_shopping_list_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:contentDescription="@string/update_shopping_list"
        android:src="@drawable/edit_pen"
        android:visibility="invisible"
        app:backgroundTint="@color/secondary_fab"
        app:fabSize="normal"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_shopping_list_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:contentDescription="@string/generate_pdf"
        android:src="@drawable/generate_pdf"
        android:visibility="invisible"
        app:backgroundTint="@color/secondary_fab"
        app:fabSize="normal"
        app:tint="@color/white" />

</FrameLayout>